<resources>
    <string name="app_name">Veggi Deli App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="contact">About Us</string>
    <string name="menu">Restaurant Menu</string>
    <string name="location">Location</string>
    <string name="gallery">Gallery</string>
    <string name="cart">Cart</string>
</resources>
