<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_camera"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        android:title="@string/menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/gallery"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/location"
        android:title="@string/location"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_phone_black_24dp"
        android:title="@string/contact"
        app:showAsAction="never"/>
</menu>
