<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/location"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/contact" />


    </group>



</menu>
